# zed-npm-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
crates/npm-manager-lsp/: Cargo.toml
crates/npm-manager-lsp/src/: main.rs  registry.rs  server.rs  state.rs  types.rs
crates/npm-manager-lsp/src/lockfile/: bun.rs  mod.rs  npm.rs  pnpm.rs  yarn.rs
crates/npm-manager-lsp/src/parser/: mod.rs  package_json.rs  pnpm_workspace.rs
src/: lib.rs
